--- a/patient-service.yml
+++ b/patient-service.yml
@@ -1,1 +1,13 @@
-
+spring:
+  datasource:
+    url: jdbc:h2:~/Downloads/spring-microservice-level-5/patient-service/database/patientsdb
+    driverClassName: org.h2.Driver
+    username: sa
+    password:
+  jpa:
+    hibernate:
+      ddl-auto: update   # or create-drop
+    show-sql: true
+  sql:
+    init:
+      mode: always
